시계기능, reset button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <input required maxlength="15" type="text" placeholder="What is your name?">
     <input type="submit" value="Log In">
   </form>
+  <h2 id="clock">00:00:00</h2>
   <h1 id="greeting" class="hidden"></h1>
+  <button id="reset-button" class="hidden">reset</button>
+
   <script src="js/js.js"></script>
+  <script src="js/clock.js"></script>
 </body>
 
 </html>
