javascript_cousor_study

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/clock.js"></script>
   <script defer src="assets/js/login.js"></script>
-  <script defer src="assets/js/morse-code.js"></script>
+  <script defer src="assets/js/morse_code.js"></script>
 </head>
 
 <body>
