--- a/개인연습페이지/index.html
+++ b/개인연습페이지/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
   <title>Momentum</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://kit.fontawesome.com/465b8b0b8e.js" crossorigin="anonymous"></script>
   <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/clock.js"></script>
   <script defer src="assets/js/login.js"></script>
@@ -14,8 +15,7 @@
 </head>
 
 <body>
-  <!-- 시계 -->
-  <h2 class="clock" id="clock"></h2>
+  <div class="clock" id="clock"></div>
   <!-- 게스트 방문 -->
   <form class="hidden gust-box" id="guest-form">
     <input class="gust-box__input" required maxlength="15" type="text" placeholder="What is your name?">
