--- a/개인연습페이지/test.html
+++ b/개인연습페이지/test.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./test.css">
+  <script type="module" src="test.js"></script>
+  <script type="module" src="./moduleItem.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <div data-include-path="footer.html"></div>
-  <script src="test.js"></script>
+  <div data-include-path="./components/moduleItem/moduleItem.html"></div>
 </body>
 
 </html>
