--- a/개인연습페이지/test.html
+++ b/개인연습페이지/test.html
@@ -6,13 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./test.css">
-  <script type="module" src="test.js"></script>
-  <script type="module" src="./moduleItem.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <div data-include-path="./components/moduleItem/moduleItem.html"></div>
+  <header id="header"></header>
+  <div class="test">
+    <div class="hellow" data-include-path="./components/moduleItem/moduleItem.html"></div>
+  </div>
+  <div id="containerA"></div>
+
+  <script defer src="test.js"></script>
+  <script src="./components/router.js"></script>
 </body>
 
 </html>
